fix(dialog): ensure the top messages are always readable
Added a padding to the top of the messages container so the top messages won't be occluded by the
dialog chrome.

--- a/src/renderer/components/GameDialog/GameDialog.module.scss
+++ b/src/renderer/components/GameDialog/GameDialog.module.scss
@@ -53,6 +53,7 @@
 	gap: 1rem;
 	overflow-x: hidden;
 	overflow-y: auto;
+	padding-top: 15rem;
 
 	p {
 		padding-left: 1rem;
